--- a/app/templates/base/footer.html
+++ b/app/templates/base/footer.html
@@ -1,4 +1,99 @@
 <footer id="footer" class="footer dark-background">
+  <div class="footer-top">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-12 text-start mb-3">
+          <h5 class="text-uppercase fw-bold text-dark">Partner Kita</h5>
+        </div>
+        <!-- Client logos here -->
+        <div class="col-2 col-md-1 my-2">
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-1.png')}}"
+            alt="Client 1"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-2 col-md-1 my-2">
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-2.png')}}"
+            alt="Client 2"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-2 col-md-1 my-2">
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-3.jpg')}}"
+            alt="Client 3"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-2 col-md-1 my-2">
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-4.png')}}"
+            alt="Client 4"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-2 col-md-1 my-2">
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-5.png')}}"
+            alt="Client 5"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-2 col-md-1 my-2">
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-6.jpg')}}"
+            alt="Client 6"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-2 col-md-1 my-2">
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-7.png')}}"
+            alt="Client 7"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-2 col-md-1 my-2">
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-8.png')}}"
+            alt="Client 8"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-2 col-md-1 my-2">
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-9.png')}}"
+            alt="Client 9"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-2 col-md-1 my-2">
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-10.jpg')}}"
+            alt="Client 10"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-2 col-md-1 my-2">
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-11.jpg')}}"
+            alt="Client 11"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-2 col-md-1 my-2">
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-12.png')}}"
+            alt="Client 11"
+            class="img-fluid"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="copyright text-center">
     <div
       class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center"
@@ -6,21 +101,22 @@
       <div class="d-flex flex-column align-items-center align-items-lg-start">
         <div>
           © 2025 <strong><span>PSIDAMAI</span></strong
-          >
-        </div>
-        <div class="credits">
-          All Rights <a>Reserved.</a>
+          >. All Rights Reserved
         </div>
       </div>
 
       <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
         <a href="mailto:psi.damai@gmail.com"><i class="bi bi-envelope"></i></a>
         <a href="tel:0214223138"><i class="bi bi-telephone-fill"></i></a>
-        <a href="https://www.instagram.com/psidamai?igsh=MTdyNmo2aGF1YnNtdg=="><i class="bi bi-instagram"></i></a>
-        <a href="https://www.linkedin.com/company/psidamai/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/psidamai?igsh=MTdyNmo2aGF1YnNtdg=="
+          ><i class="bi bi-instagram"></i
+        ></a>
+        <a href="https://www.linkedin.com/company/psidamai/"
+          ><i class="bi bi-linkedin"></i
+        ></a>
       </div>
-
-      
+    </div>
+  </div>
 </footer>
 
 <!-- Scroll Top -->
