--- a/app/templates/dashboard/program.html
+++ b/app/templates/dashboard/program.html
@@ -54,7 +54,8 @@
         <div class="container ">
           <div class="row gy-4">
             <div class="col-lg-4" data-aos="fade-up">
-              <article>
+              <a href="/program_content" class="post-item-link" style="text-decoration: none;">
+              <article class="post-item">
                 <div class="post-img">
                   <img
                     src="{{url_for('static', filename='assets/img/program/program-1.jpg')}}"
