--- a/app/templates/base/footer.html
+++ b/app/templates/base/footer.html
@@ -1,89 +1,97 @@
 <footer id="footer" class="footer dark-background">
   <div class="footer-top">
     <div class="container">
+      <!-- Funded by Section -->
+      <div class="row text-center align-items-center mb-4">
+        <div class="col-12 d-flex justify-content-start align-items-center">
+          <!-- Logo PSI -->
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-2.png')}}"
+            alt="Logo PSI"
+            class="img-fluid"
+            style="height: 60px; margin-right: 15px"
+          />
+          <!-- Funded by Text -->
+          <div class="text-start">
+            <p class="fw-bold text-uppercase mb-1 text-dark">Funded by</p>
+            <img
+              src="{{url_for('static', filename='assets/img/clients/client-1.png')}}"
+              alt="Logo Koneksi"
+              class="img-fluid"
+              style="height: 40px"
+            />
+          </div>
+        </div>
+      </div>
+
       <div class="row text-center">
         <div class="col-12 text-start mb-3">
           <h5 class="text-uppercase fw-bold text-dark">Partner Kita</h5>
         </div>
-        <!-- Client logos here -->
-        <div class="col-2 col-md-1 my-2">
-          <img
-            src="{{url_for('static', filename='assets/img/clients/client-1.png')}}"
-            alt="Client 1"
-            class="img-fluid"
-          />
-        </div>
-        <div class="col-2 col-md-1 my-2">
-          <img
-            src="{{url_for('static', filename='assets/img/clients/client-2.png')}}"
-            alt="Client 2"
-            class="img-fluid"
-          />
-        </div>
-        <div class="col-2 col-md-1 my-2">
+        <div class="col-3 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-3.jpg')}}"
             alt="Client 3"
             class="img-fluid"
           />
         </div>
-        <div class="col-2 col-md-1 my-2">
+        <div class="col-3 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-4.png')}}"
             alt="Client 4"
             class="img-fluid"
           />
         </div>
-        <div class="col-2 col-md-1 my-2">
+        <div class="col-3 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-5.png')}}"
             alt="Client 5"
             class="img-fluid"
           />
         </div>
-        <div class="col-2 col-md-1 my-2">
+        <div class="col-3 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-6.jpg')}}"
             alt="Client 6"
             class="img-fluid"
           />
         </div>
-        <div class="col-2 col-md-1 my-2">
+        <div class="col-3 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-7.png')}}"
             alt="Client 7"
             class="img-fluid"
           />
         </div>
-        <div class="col-2 col-md-1 my-2">
+        <div class="col-3 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-8.png')}}"
             alt="Client 8"
             class="img-fluid"
           />
         </div>
-        <div class="col-2 col-md-1 my-2">
+        <div class="col-3 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-9.png')}}"
             alt="Client 9"
             class="img-fluid"
           />
         </div>
-        <div class="col-2 col-md-1 my-2">
+        <div class="col-3 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-10.jpg')}}"
             alt="Client 10"
             class="img-fluid"
           />
         </div>
-        <div class="col-2 col-md-1 my-2">
+        <div class="col-3 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-11.jpg')}}"
             alt="Client 11"
             class="img-fluid"
           />
         </div>
-        <div class="col-2 col-md-1 my-2">
+        <div class="col-3 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-12.png')}}"
             alt="Client 11"
