--- a/app/templates/dashboard/home.html
+++ b/app/templates/dashboard/home.html
@@ -42,21 +42,28 @@
   </head>
 </html>
 
-{% include "base/navbar.html" %}
-
-
   <main class="main">
 
     <!-- Hero Section -->
     <section id="hero" class="hero section">
+  
+      <a href="/" class="logohome d-flex align-items-center" style="position: absolute; left: 50%; top: 20px; transform: translateX(-50%);">
+        <img src="{{url_for('static', filename='assets/img/logo_web.png')}}" alt="PSI Damai Logo" style="width: 120px; height: auto;">
+    </a>
+    
 
-      <div class="container d-flex flex-column justify-content-end align-items-center text-center position-relative" data-aos="zoom-out" style="top: -200px;">
-    <p class="welcome-text mt-n3">Selamat Datang Di PSIDAMAI</p>
+      <div class="container d-flex flex-column justify-content-end align-items-center text-center position-relative" data-aos="zoom-out" style="top: 20px;">
+    <p class="welcome-text mt-n2">Selamat Datang Di PSIDAMAI</p>
     <p class="welcome-text1 px-3">PSIDAMAI adalah program mindfulness yang berkomitmen menyediakan layanan kesehatan mental inklusif, terjangkau, dan mudah diakses bagi dewasa muda di Indonesia.</p>
     <p class="text-light fs-4 fw-bold mb-9">Jika kamu penasaran dengan kesehatan mental kamu klik tombol di bawah!</p>
     <div class="d-flex mt-n2">
       <a href="javascript:void(0);" class="btn-get-started scrollto" onclick="startTest()">Cek Kesehatan Mentalmu, Yuk!</a>
     </div>
+    <p class="text-light fs-4 fw-bold mt-5">Kamu ingin mengakses program & materi mindfulness lebih lanjut? Klik tombol di bawah!</p>
+    <div class="d-flex mt-3">
+      <a href="/login" class="btn-get-started scrollto">Mulai Program</a>
+    </div>
+</div>
 </div>
       <div
   class="modal fade"
@@ -176,7 +183,7 @@
 
     
 <!-- Card  Section -->
-<section class="custom-section">
+<section class="custom-section" data-aos="zoom-in-up">
   <div class="container">
     <h2 class="text-white text-center mb-5">Apa saja yang dapat kamu akses?</h2>
     <div class="row g-4">
@@ -330,7 +337,7 @@
             </div>
         </div>
         <!-- Teks Tata Cara -->
-        <div class="guide-container">
+        <div class="guide-container" data-aos="fade-up">
           <h2 class="guide-title">Tata Cara Penggunaan Website <span>PSIDAMAI</span></h2>
           <ol class="guide-list">
               <li>
